# ForexPredictorD

./: .env.example  .replit  README.md  app.py  config.py  dependencies.txt  pyproject.toml
backtest/: __init__.py  strategy.py
models/: __init__.py  deep_learning.py  machine_learning.py
utils/: __init__.py  data_loader.py  economic_calendar.py  news_api.py  prediction_summary.py  preprocessing.py  technical_indicators.py  telegram_notification.py  twelvedata_api.py  visualization.py
