[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "newsapi-python>=0.2.7",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "plotly>=6.0.1",
    "scikit-learn>=1.6.1",
    "streamlit>=1.45.1",
    "tensorflow>=2.14.0",
    "trafilatura>=2.0.0",
    "twelvedata>=1.2.25",
    "xgboost>=3.0.1",
    "yfinance>=0.2.61",
]
